# telegram-assist

./: .dockerignore  .env.example  .gitignore  Dockerfile  QOLLANMA-BATAFSIL.md  QOLLANMA-TEST.md  QOLLANMA.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  config.py  logging_conf.py  main.py  registry.py
app/bot/: __init__.py  application.py  handlers.py  keyboards.py  ui.py
app/brain/: __init__.py  contacts.py  gemini_router.py  intent_router.py  intents.py  nlu_schema.py  prompts.py  router_factory.py  time_parse.py  (+2 more)
migrations/: env.py
scripts/: __init__.py  clear_digest_data.py  clone_voice.py  generate_session.py  google_auth.py  seed_digest_demo.py
tests/: conftest.py  test_answer_service.py  test_boot.py  test_briefing.py  test_buttons.py  test_calendar.py  test_calendar_autoadd.py  test_calendar_view.py  test_callbacks.py  test_cancel.py  test_clock_parse.py  test_contact_resolution.py  test_contact_search.py  test_contacts_send.py  test_decisions.py  test_digest.py  test_digest_enhancements.py  test_disambiguation.py  test_dispatch.py  test_documents.py  test_error_reply.py  test_events.py  test_gemini_router.py  test_gif_service.py  test_gmail.py  test_google_oauth_setup.py  test_item_delete.py  test_jarvis_tools.py  test_last_contact.py  test_listing.py  test_meetings.py  test_news_service.py  test_nlu_direct_phone.py  test_nlu_multi.py  test_notion.py  test_personal_data.py  test_rate_limit.py  test_recurrence.py  test_secrets.py  test_telegram_archive_service.py  (+6 more)
(+80 files in other folders)
